--- a/Advanced/Advanced_1/index.html
+++ b/Advanced/Advanced_1/index.html
@@ -28,9 +28,9 @@ function CoffeeMaceDrip(){}
 console.log(CoffeeMaceDrip.prototype)
 // coffeeMaceDrip.on()
 // coffeeMaceDrip.off()
-CoffeeMaceDrip.__proto__ = CoffeeMace
+// CoffeeMaceDrip.__proto__ = CoffeeMace
 
-CoffeeMaceDrip.on()
+// CoffeeMaceDrip.on()
 // console.log(coffeeMaceDrip.prototype)
 
 
