--- a/Advanced/Advanced_1/index.html
+++ b/Advanced/Advanced_1/index.html
@@ -10,106 +10,29 @@
 	<script type="text/javascript">
 
 
+function CoffeeMaker(name){
+	this.name = name;
+}
+
+CoffeeMaker.prototype.on = function(){console.log( this.name +' on')}
+CoffeeMaker.prototype.off = function(){console.log( this.name +' off')}
 
 
-
-let CoffeeMace = {
-	this:'CoffeeMace',
-};
-
-	Object.prototype.on = function(){console.log('on')},
-    Object.prototype.off = function(){console.log('off')}
-
-
-CoffeeMace.on()
-
-let CoffeeMaceDrip = {};
-
-console.log(CoffeeMaceDrip)
-CoffeeMaceDrip.on()
-CoffeeMaceDrip.off()
-
-
-// function CoffeeMaceDrip(){}
-
-//     CoffeeMaceDrip.prototype.addSugar = function(){
-//     	console.log('Add 50g sugar')
-//     };
-
-
-
-// console.log(CoffeeMaceDrip.prototype)
-// coffeeMaceDrip.on()
-// coffeeMaceDrip.off()
-// CoffeeMaceDrip.__proto__ = CoffeeMace
-
-// CoffeeMaceDrip.on()
-
-// let user = {
-// 	username:'Petro',
-// 	_password:'',
-
-// 	set password(pass){
-// 		this._password = pass.trim()
-// 	},
-// 	get password (){
-// 		return this._password
-// 	}
-// }
-
-
-// user.password = ' hello '
-
-// let user2 ={};
-// user2.__proto__=user;
-
-// console.log(user)
-// let user2 = {
-// 	username:'Petro',
-// 	password:'111'
+// let CoffeeMakerDrip = function(){
+//         this.__proto__ = CoffeeMaker()
 // }
 
 
 
-// let user2 = {} ;
-// user2.__proto__ = user;
 
-// user.photo = "jpg"
-
-// // console.log(user)
-// console.log(user2)
-// console.log(user2.username)
-
-let user ={
-	name:"Petro",
-	age: 18,
-
-}
+let CoffeeMakerDrip = new CoffeeMaker('CoffeeMakerDrip')
+	
 
 
+// CoffeeMakerDrip.prototype.drip = function(){console.log( this.name +' drip')}
 
-
-let user2 = {
-	age:25,
-	__proto__:user,
-}
-
-// user2.wath()
-
-let user3 = {
-		country:"Sweden",
-	__proto__:user2,
-}
-
-// user.wath()
-
-console.log(user)
-
-// console.log(user)
-// console.log(user2)
-// console.log(user2.name = "Ivan")
-// console.log(user2.__proto__.age)
-
+// console.log( CoffeeMakerDrip)
+// CoffeeMakerDrip.off();
 
 
 
