--- a/Advanced/Advanced_1/index.html
+++ b/Advanced/Advanced_1/index.html
@@ -9,37 +9,46 @@
 	
 	<script type="text/javascript">
 
-
-function CoffeeMaker(name){
-	this.name = name;
-}
-
-CoffeeMaker.prototype.on = function(){console.log( this.name +' on')}
-CoffeeMaker.prototype.off = function(){console.log( this.name +' off')}
-
-
-// let CoffeeMakerDrip = function(){
-//         this.__proto__ = CoffeeMaker()
-// }
+function CoffeeMaker(name){this.name = name};
+CoffeeMaker.prototype.on = function(){console.log( this.name +' -> on')};
+CoffeeMaker.prototype.off = function(){console.log( this.name +' -> off')};
+const coffeeMaker = new CoffeeMaker('Coffee Maker');
+coffeeMaker.on();
+coffeeMaker.off();
 
 
+function CoffeeMakerDrip(){
+CoffeeMaker.apply(this,arguments)};
+CoffeeMakerDrip.prototype = Object.create(CoffeeMaker.prototype);
+CoffeeMakerDrip.prototype.cappuccino = function(){console.log(this.name +' -> cappuccino')};
+const coffeeMakerDrip = new CoffeeMakerDrip('Coffee Maker Drip');
+coffeeMakerDrip.on();
+coffeeMakerDrip.off();
+coffeeMakerDrip.cappuccino();
 
 
-let CoffeeMakerDrip = new CoffeeMaker('CoffeeMakerDrip')
-	
+function CoffeeMakerСarob(){
+CoffeeMakerDrip.apply(this,arguments)};
+CoffeeMakerСarob.prototype = Object.create(CoffeeMakerDrip.prototype);
+CoffeeMakerСarob.prototype.espresso = function(){console.log(this.name +' -> espresso')};
+const coffeeMakerСarob = new CoffeeMakerСarob('Coffee Maker Сarob');
+coffeeMakerСarob.on();
+coffeeMakerСarob.off();
+coffeeMakerСarob.cappuccino();
+coffeeMakerСarob.espresso();
 
 
-// CoffeeMakerDrip.prototype.drip = function(){console.log( this.name +' drip')}
-
-// console.log( CoffeeMakerDrip)
-// CoffeeMakerDrip.off();
-
-
+function CoffeeMachine(){
+CoffeeMakerСarob.apply(this,arguments)};
+CoffeeMachine.prototype = Object.create(CoffeeMakerСarob.prototype);
+CoffeeMachine.prototype.sugar = function(){console.log(this.name +' -> add 50g sugar')};
+const сoffeeMachine = new CoffeeMachine('Сoffee Machine');
+сoffeeMachine.on();
+сoffeeMachine.off();
+сoffeeMachine.cappuccino();
+сoffeeMachine.espresso();
+сoffeeMachine.sugar();
 
 	</script>
 </body>
 </html>	
-
-<!-- Напишіть функцію CoffeeMake, яка буде мати в прототипах 2 методи: on(),off().
-Далі напишіть ще методи для 3х типів кавоварок: капельна, ріжкова, каво-машина, які
-будуть наслідувати базовий функціонал CoffeeMake, а також мати власний. -->
