--- a/Advanced/A_d-class/index.html
+++ b/Advanced/A_d-class/index.html
@@ -3,51 +3,86 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Prototype</title>
+	<title>Class</title>
 </head>
 <body>
 
 	<script type="text/javascript">
+	// Task Workers
+	class Worker {
+		constructor(firstName,secondName,rate,days){
+		 this.name = firstName,
+		 this.surname = secondName,
+		 this.rate = rate,
+		 this.days = days
+		}
+		
+		getData(){
+			return(
+		  	  console.log("Name- " + this.name),
+			  console.log("Surname- " + this.surname),
+	          console.log("Rate- " + this.rate),
+			  console.log("Days- " + this.days)
+			)
+		}
 
-function CoffeeMaker(name){this.name = name};
-CoffeeMaker.prototype.on = function(){console.log( this.name +' -> on')};
-CoffeeMaker.prototype.off = function(){console.log( this.name +' -> off')};
-const coffeeMaker = new CoffeeMaker('Coffee Maker');
-coffeeMaker.on();
-coffeeMaker.off();
+		getSalary(){
+		  return (
+			  console.log("Salary - " + this.rate * this.days),
+			  console.log("------------------------------------")
+		  )
+		 
+		}
+
+	}
+
+	const person1 = new Worker("Petro" , "Hresa", 3000, 15);
+	    person1.getData();
+	    person1.getSalary();
 
 
-function CoffeeMakerDrip(){
-CoffeeMaker.apply(this,arguments)};
-CoffeeMakerDrip.prototype = Object.create(CoffeeMaker.prototype);
-CoffeeMakerDrip.prototype.cappuccino = function(){console.log(this.name +' -> cappuccino')};
-const coffeeMakerDrip = new CoffeeMakerDrip('Coffee Maker Drip');
-coffeeMakerDrip.on();
-coffeeMakerDrip.off();
-coffeeMakerDrip.cappuccino();
+
+	const person2 = new Worker("Taras" , "Suslik", 1300, 27);
+	    person2.getData();
+	    person2.getSalary();
 
 
-function CoffeeMakerСarob(){
-CoffeeMakerDrip.apply(this,arguments)};
-CoffeeMakerСarob.prototype = Object.create(CoffeeMakerDrip.prototype);
-CoffeeMakerСarob.prototype.espresso = function(){console.log(this.name +' -> espresso')};
-const coffeeMakerСarob = new CoffeeMakerСarob('Coffee Maker Сarob');
-coffeeMakerСarob.on();
-coffeeMakerСarob.off();
-coffeeMakerСarob.cappuccino();
-coffeeMakerСarob.espresso();
+	const person3 = new Worker("Oleg" , "Teran", 1800, 20);
+	    person3.getData();
+		person3.getSalary();
+		
 
+	// Task MyString
+	
+	class MyString{
 
-function CoffeeMachine(){
-CoffeeMakerСarob.apply(this,arguments)};
-CoffeeMachine.prototype = Object.create(CoffeeMakerСarob.prototype);
-CoffeeMachine.prototype.sugar = function(){console.log(this.name +' -> add 50g sugar')};
-const сoffeeMachine = new CoffeeMachine('Сoffee Machine');
-сoffeeMachine.on();
-сoffeeMachine.off();
-сoffeeMachine.cappuccino();
-сoffeeMachine.espresso();
-сoffeeMachine.sugar();
+			reverse(str){
+				return  str.split('').reverse().join('');
+			}
+
+			ucFirst(str){
+				return str[0].toUpperCase() + str.slice(1);
+			}
+
+			ucWords(str){
+
+				let splits = str.split(' ');
+				let stringItog = '';
+				for (let i = 0; i < splits.length; i++){
+					let firstLetter = splits[i].substring(0,1).toUpperCase();
+					let nextLetters = splits[i].substring(1).toLowerCase();
+                        stringItog += firstLetter + nextLetters + ' ';   
+				}
+				return stringItog;
+
+			}
+
+	}
+
+	const mystring = new MyString()
+	      console.log(mystring.reverse("Hello wprld"))
+		  console.log(mystring.ucFirst("hello world"))
+		  console.log(mystring.ucWords('admin admin admin'))
 
 	</script>
 
