change:class in index.html and variable in script.js

--- a/Advanced/A_d-modules/index.html
+++ b/Advanced/A_d-modules/index.html
@@ -9,22 +9,22 @@
 	<link href="css/style.css" rel="stylesheet" >
 </head>
 <body>
-     <form class="block" name='products'>
+     <form class="block" name='ProductsBalance'>
 		 <div class="block__item">
 			 <p class="block__name">Баланс</p>
-			 <input type="text" class="block__enter" name="balance" value="1000">
+			 <input type="text" class="block__enter" name="balance" value="1000 грн">
 		 </div>
 		 <div class="block__item">
 			 <p class="block__name">Пиво</p>
-			 <input type="text" class="block__enter" name="Beer" value="80">
+			 <input type="text" class="block__enter" name="Beer" value="80 шт">
 		 </div>
 		 <div class="block__item">
 			 <p class="block__name">Вино</p>
-			 <input type="text" class="block__enter" name="Vine" value="70">
+			 <input type="text" class="block__enter" name="Vine" value="70 шт">
 		 </div>
 		 <div class="block__item">
 			 <p class="block__name">Пепсі</p>
-			 <input type="text" class="block__enter" name="Pepsi" value="100">
+			 <input type="text" class="block__enter" name="Pepsi" value="100 шт">
 		 </div>
 	 </form>
 	 <!-------------------------------------->
